--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class='sim'></div>
     <div class='settings'>
-        <button onclick='changeView()'>CHANGE VIEW</button>
-        <button onclick='switchPlock()'>LOCK</button>
+        <button onclick='changeView()' id='view'>CHANGE VIEW</button>
+        <button onclick='switchPlock()'id='locker'>LOCK</button>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js"></script>
